--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@sentry/react-native": "5.24.3",
     "@tanstack/query-async-storage-persister": "^5.25.0",
-    "@tanstack/react-query": "^5.8.1",
+    "@tanstack/react-query": "5.8.2",
     "@tanstack/react-query-persist-client": "^5.25.0",
     "@tiptap/core": "^2.9.1",
     "@tiptap/extension-document": "^2.9.1",
